Exclude expand and collapse from default actions

--- a/examples/expand.html
+++ b/examples/expand.html
@@ -23,7 +23,7 @@
   <h1>Expand</h1>
   <button type="button" value="expand">Expand</button>
   <button type="button" value="collapse">Collapse</button>
-  <ul class="st-tree" data-controller="tree">
+  <ul class="st-tree" data-controller="tree" data-action="tree:expand->tree#expand tree:collapse->tree#collapse">
     <li data-node-id="1">
       <a href="#icon" class="st-tree__icon"></a>
       <span>1</span>
