--- a/examples/callbacks.html
+++ b/examples/callbacks.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1.3.0/dist/es-module-shims.js"></script>
   <script type="importmap">
     {
       "imports": {
-        "@hotwired/stimulus": "/node_modules/@hotwired/stimulus/dist/stimulus.js",
-        "@kanety/stimulus-static-actions": "/node_modules/@kanety/stimulus-static-actions/dist/index.module.js",
-        "@kanety/stimulus-tree": "/dist/index.module.js"
+        "@hotwired/stimulus": "https://cdn.jsdelivr.net/npm/@hotwired/stimulus@3.0.1/dist/stimulus.js",
+        "@kanety/stimulus-static-actions": "https://cdn.jsdelivr.net/npm/@kanety/stimulus-static-actions@1.0.1/dist/index.module.js",
+        "@kanety/stimulus-tree": "../dist/index.module.js"
       }
     }
   </script>
@@ -17,10 +18,10 @@
     const application = Application.start();
     application.register('tree', TreeController);
   </script>
-  <link rel="stylesheet" href="/dist/index.css"></link>
+  <link rel="stylesheet" href="../dist/index.css"></link>
 </head>
 <body>
-  <h1>Callback</h1>
+  <h1>Callbacks</h1>
   <ul class="st-tree" data-controller="tree">
     <li data-node-id="1">
       <a href="#icon" class="st-tree__icon"></a>
@@ -46,10 +47,10 @@
   <script>
     let element = document.querySelector('[data-controller="tree"]');
     element.addEventListener('tree:opened', (e) => {
-      alert('opened: ' + e.detail.node.getAttribute('data-node-id'));
+      console.log('opened: ', e.detail);
     });
     element.addEventListener('tree:closed', (e) => {
-      alert('closed: ' + e.detail.node.getAttribute('data-node-id'));
+      console.log('closed: ', e.detail);
     });
   </script>
 </body>
