Add lazy load feature

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,7 @@
     <li><a href="basic.html">basic</a></li>
     <li><a href="callbacks.html">callbacks</a></li>
     <li><a href="expand.html">expand</a></li>
-    <li><a href="lazy-load.html">lazy-load</a></li>
+    <li><a href="lazy.html">lazy-load</a></li>
   </ul>
 </body>
 </html>
